[package]
name = "forward-traits"
version = "3.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A general trait-forwarding crate"
homepage = "https://github.com/Zistack/forward-traits"
repository = "https://github.com/Zistack/forward-traits"
readme = "README.md"
keywords = ["trait", "forward", "forwarding", "newtype", "delegation"]
categories = ["rust-patterns", "development-tools"]

[dependencies]
syn = {version = "2.0", features = ["full", "fold", "extra-traits"]}
proc-macro2 = {version = "1.0"}
quote = {version = "1.0"}
syn_derive = {version = "0.1"}

[lib]
proc-macro = true
